[project]
name = "pymachi"
version = "0.1"
authors = [
  { name="Joe Garrett", email="joseph.garrett@ntnu.no" },
]
description = "Estimates the scattering and gaseous absoprtion present in a hyperspectral image"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/NTNU-SmallSat-Lab/MACHI"
Issues = "https://github.com/NTNU-SmallSat-Lab/MACHI/issues"
